layout 3 alignment fix

--- a/coding-exercises/07.18-medley-week/style/layout4.css
+++ b/coding-exercises/07.18-medley-week/style/layout4.css
@@ -58,16 +58,16 @@
 
 @media (min-width: 1200px) {
 
-	.text {
+	.module4 .text {
 		flex-direction: row;
 		justify-content: space-between;
 	}
 
-	page-header {
+	.module4 page-header {
 		width: 50%;
 	}
 
-	.section1 {
+	.module4 .section1 {
 		width: 50%;
 	}
 
